# LLM-Game-Generator-LangChain

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_pic_generate.py
game_ideas_prompts/: tank_game
src/: config.py  utils.py
src/frontend/: app.py
src/frontend/templates/: index.html
src/generation/: asset_gen.py  chains.py  comfyUI_prompt.json  core.py  create_hitbox.py  game_state.py  model_factory.py  picture_generate.py  prompt_compress_node.py
src/generation/core/: chains.py  core.py  graph_builder.py  memory_manager.py  nodes.py  programmer_node_utils.py
src/generation/template/: asset_manager.py  camera.py  infinite_map.py  menu.py  template.py  test.py
src/generation/utils/: memory_saver.py  prompt_compress_node.py  schemas.py  token_tracker.py
src/prompts/: code_generation_prompts.py  game_logic_cheat_sheet.py  testing_prompts.py
src/rag_service/: rag.py
src/testing/: runner.py
test/: test_Regex.py  test_asset_manager.py  test_fixer_utils.py  test_hitbox.py  test_pic_generate.py
